Change "sequence" to "sequence"

--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/tax-ws-review/tax-ws-review.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/tax-ws-review/tax-ws-review.component.html
@@ -117,7 +117,7 @@
                         <table id="userManagementDt" class="ui small celled table aligned hover striped selectable" style="width: 5000px;">
                             <thead id="trDrinamic">
                                 <tr>
-                                    <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                                    <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                                     <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
                                     <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
                                     <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
