--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-3/cop06-3-1/cop06-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-3/cop06-3-1/cop06-3-1.component.html
@@ -118,7 +118,7 @@
         <table id="showDt" class="ui small celled table striped selectable nowrap" style="width: 100%">
             <thead>
               <tr style="text-align: center;">
-                <th>ลำดับ</th>
+                <th>ลำดับที่</th>
                 <th>รายการ</th>
                 <th>ปริมาณจ่ายสิค้าสำเร็จรูปในใบกำกับภาษี
                 </th>
