--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop07/cop07-1/cop07-1-1/cop07-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop07/cop07-1/cop07-1-1/cop07-1-1.component.html
@@ -29,7 +29,7 @@
       <thead>
 
         <tr>
-          <th style="text-align: center !important;">ลำดับ</th>
+          <th style="text-align: center !important;">ลำดับที่</th>
           <th style="text-align: center !important;">เลขที่ผู้ประกอบการ</th>
           <th style="text-align: center !important;">ชื่อผู้ประกอบการ</th>
           <th style="text-align: center !important;">สถานที่ตั้งของผู้ประกอบการ</th>
@@ -55,7 +55,7 @@
         <thead>
 
           <tr>
-            <th style="text-align: center !important;">ลำดับ</th>
+            <th style="text-align: center !important;">ลำดับที่</th>
             <th style="text-align: center !important;">เลขที่ผู้ประกอบการ</th>
             <th style="text-align: center !important;">ชื่อผู้ประกอบการ</th>
             <th style="text-align: center !important;">สถานที่ตั้งของผู้ประกอบการ</th>
