--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-5/int01-5-1/int01-5-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-5/int01-5-1/int01-5-1.component.html
@@ -89,7 +89,7 @@
                 <table id="table" class="ui small celled table nowrap striped selectable " style="width: 100%">
                     <thead>
                         <tr> 
-                            <th rowspan="2" style="text-align: center !important;">ลำดับ</th>
+                            <th rowspan="2" style="text-align: center !important;">ลำดับที่</th>
                             <th rowspan="2" style="text-align: center !important;">ชื่อรายได้</th>
                             <th rowspan="1" colspan="2" style="text-align: center !important;" *ngFor="let data of trHtml1">{{data}}</th>
                         </tr>
