--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -66,7 +66,7 @@
           <table id="datatable" style="width: 100%;" class="ui small collapsing celled table aligned hover nowrap striped selectable">
             <thead>
               <tr style="text-align: center !important;">
-                <th>ลำดับ</th>
+                <th>ลำดับที่</th>
                 <th>วันที่สร้างแบบสอบถาม</th>
                 <th>ผู้สร้างแบบสอบถาม</th>
                 <th>วันที่แก้ไขแบบสอบถามล่าสุด</th>
