--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -42,7 +42,7 @@
                     <label></label>
                   </div>
                 </th>
-                <th style="text-align: center !important">ลำดับ</th>
+                <th style="text-align: center !important">ลำดับที่</th>
                 <th style="text-align: center !important">แบบสอบถามด้าน</th>
                 <th style="text-align: center !important">สร้างโดย</th>
                 <th style="text-align: center !important">จัดการ</th>
