--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-7/int06-7-1/int06-7-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-7/int06-7-1/int06-7-1.component.html
@@ -59,7 +59,7 @@
     <table id="table" class="ui small celled table striped selectable" style="width: 100%;">
         <thead>
             <tr style="text-align: center">
-                <th>ลำดับ</th>
+                <th>ลำดับที่</th>
                 <th>วันที่ทำรายการ</th>
                 <th>ผู้ทำรายการ</th>
                 <th>วันเวลาที่เปิดระบบ</th>
