--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-7/int06-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-7/int06-7.component.html
@@ -97,7 +97,7 @@
     <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
         <thead>
             <tr style="text-align: center">
-                <th>ลำดับ</th>
+                <th>ลำดับที่</th>
                 <th>ประเภทค่าสาธารณูปโภค</th>
                 <th>ใบแจ้งหนี้เดือน</th>
                 <th>เลขที่ใบแจ้งหนี้</th>
