--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -201,7 +201,7 @@
         <table id="tableData" class="ui small celled table striped selectable" style="width: 120%">
           <thead>
             <tr style="text-align: center;">
-              <th rowspan="2">ลำดับ</th>
+              <th rowspan="2">ลำดับที่</th>
               <th rowspan="2" style="width: 50%;">โครงการตามยุทธศาสตร์</th>
               <th rowspan="2">หน่วยงาน</th>
               <th rowspan="2">สถานะ</th>
