--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-6/int08-2-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-6/int08-2-6.component.html
@@ -133,7 +133,7 @@
         <table id="tableData" class="ui small celled table striped selectable">
           <thead>
             <tr style="text-align: center;">
-              <th rowspan="2">ลำดับ</th>
+              <th rowspan="2">ลำดับที่</th>
               <th rowspan="2">ระบบงานสารสนเทศหลักของกรมฯ</th>
               <th rowspan="2">ร้อยละความเห็นหน่วยงานที่ต้องการปรับปรุง </th>
               <th colspan="2">ประเมินความเสี่ยง </th>
