--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
@@ -133,7 +133,7 @@
         <table id="tableData" class="ui small celled table striped selectable" style="width: 140%;">
           <thead>
             <tr style="text-align: center;">
-              <th rowspan="2">ลำดับ</th>
+              <th rowspan="2">ลำดับที่</th>
               <th rowspan="2">ระบบงานสารสนเทศ</th>
               <th colspan="8">ผลการตรวจสอบระบบสารสนเทศ (จำนวนครั้งที่ระบบใช้งานไม่ได้)</th>
               <th rowspan="2">จำนวนครั้งรวมที่ระบบใช้งานไม่ได้</th>
