--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -695,7 +695,7 @@
           <table id="dataTable_int08_3_10" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
-                <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                 <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
                 <th rowspan="2" style="text-align: center !important">แบบสอบถามระบบการควบคุมภายใน</th>
                 <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
@@ -785,7 +785,7 @@
           <table id="dataTable_int08_3_11" class="ui small celled table striped selectable" style="width: 100%;">
             <thead>
               <tr>
-                <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                 <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
                 <th rowspan="2" style="text-align: center !important">จำนวนครั้งที่ส่งเงินเกิน 3 วัน</th>
                 <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
