--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-4/int08-3-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-4/int08-3-4.component.html
@@ -203,7 +203,7 @@
         <table id="dataTable" class="ui small celled table striped" style="width: 100%;">
           <thead>
             <tr>
-              <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+              <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
               <th rowspan="2" style="text-align: center !important" class="four wide field ">หน่วยงาน</th>
               <th rowspan="2" style="text-align: center !important">ค่าความเสี่ยง</th>
               <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
