--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-8/int08-3-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-8/int08-3-8.component.html
@@ -92,7 +92,7 @@
         <table id="dataTable" class="ui celled table striped selectable " style="width: 100%;">
           <thead>
             <tr>
-              <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+              <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
               <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
               <th rowspan="2" style="text-align: center !important">จำนวนค่าปรับ</th>
               <th rowspan="2" style="text-align: center !important">ประมาณการค่าปรับ</th>
