--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
@@ -91,7 +91,7 @@
             <table class="ui small celled table striped selectable">
                 <thead>
                     <tr style="text-align: center;">
-                        <th rowspan="3">ลำดับ</th>
+                        <th rowspan="3">ลำดับที่</th>
                         <th rowspan="3">รายการ</th>
                         <th colspan="2">เปรียบเทียบข้อมูลหลัก กับ ข้อมูลจากTemplate</th>
                         <th rowspan="3">ผลต่าง</th>
