--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-11/ts01-11.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-11/ts01-11.component.html
@@ -210,7 +210,7 @@
                             <table class="ui celled padded table">
                                 <thead>
                                     <tr>
-                                        <th class="single line">ลำดับ</th>
+                                        <th class="single line">ลำดับที่</th>
                                         <th>รายการ</th>
                                         <th>จำนวน</th>
                                         <th>หมายเหตุ</th>
