--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-14/ts01-14.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-14/ts01-14.component.html
@@ -451,7 +451,7 @@
                             <table class="ui celled padded table" style="text-align: center">
                                 <thead>
                                     <tr>
-                                        <th class="single line">ลำดับ</th>
+                                        <th class="single line">ลำดับที่</th>
                                         <th>วันเดือนปี</th>
                                         <th>ประเภทสินค้า</th>
                                         <th>จำนวนเงิน</th>
