--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-16/ts01-16.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-16/ts01-16.component.html
@@ -244,7 +244,7 @@
                         <table class="ui celled padded table" style="text-align: center">
                             <thead>
                                 <tr>
-                                    <th class="single line">ลำดับ</th>
+                                    <th class="single line">ลำดับที่</th>
                                     <th>จำนวนภาษี</th>
                                     <th>เบี้ยปรับ......เท่า</th>
                                     <th>เงินเพิ่ม</th>
@@ -287,7 +287,7 @@
                         <table class="ui celled padded table" style="text-align: center">
                             <thead>
                                 <tr>
-                                    <th class="single line">ลำดับ</th>
+                                    <th class="single line">ลำดับที่</th>
                                     <th>จำนวนภาษี</th>
                                     <th>เบี้ยปรับร้อยละ</th>
                                     <th>เงินเพิ่ม</th>
