--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-1/ope04-1.component.html
@@ -104,7 +104,7 @@
                 <table class="ui small celled table striped selectable" style="width: 120%;" id="showDt">
                     <thead>
                         <tr style="text-align: center;">
-                            <th>ลำดับ</th>
+                            <th>ลำดับที่</th>
                             <th>รายการ</th>
                             <th>ใบกำกับภาษี</th>
                             <th>บัญชีประจำวัน</th>
