--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6-1/ope04-6-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6-1/ope04-6-1.component.html
@@ -69,7 +69,7 @@
       <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
         <thead>
           <tr>
-            <th style="text-align: center !important;" rowspan="2">ลำดับ</th>
+            <th style="text-align: center !important;" rowspan="2">ลำดับที่</th>
             <th style="text-align: center !important;" rowspan="2">รายการ</th>
             <th style="text-align: center !important;" colspan="3">ขอลดหย่อนภาษีตาม ภส.05-03</th>
             <th style="text-align: center !important;" colspan="4">ใบเสร็จรับเงิน</th>
