--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
@@ -109,7 +109,7 @@
       <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
         <thead>
           <tr>
-            <th class="text-center">ลำดับ</th>
+            <th class="text-center">ลำดับที่</th>
             <th class="text-center">รายการ</th>
             <th class="text-center">ราคาสินค้าตามแบบแจ้ง</th>
             <th class="text-center">ราคาจากข้อมูลภายนอก</th>
