--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-3/ope05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-3/ope05-3.component.html
@@ -103,7 +103,7 @@
         <table class="ui small celled table striped selectable" style="width: 180%">
           <thead>
             <tr style="text-align: center;">
-              <th>ลำดับ</th>
+              <th>ลำดับที่</th>
               <th>เดือน</th>
               <th>รายการ</th>
               <th>ใบ Order</th>
