--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-5/ope05-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope05/ope05-5/ope05-5.component.html
@@ -102,7 +102,7 @@
       <table class="ui small celled table striped selectable">
         <thead>
           <tr style="text-align: center;">
-            <th>ลำดับ</th>
+            <th>ลำดับที่</th>
             <th>รายการ</th>
             <th>ยอดคงเหลือตามบัญชี ภส 07-01</th>
             <th>ยอดคงเหลือจากการตรวจนับ</th>
