--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -117,7 +117,7 @@
                         <table id="userManagementDt" class="ui small celled table aligned nowrap hover" style="width: 100%;">
                             <thead id="trDrinamic">
                                 <tr style="text-align: center !important">
-                                    <th rowspan="2">ลำดับ</th>
+                                    <th rowspan="2">ลำดับที่</th>
                                     <th rowspan="2">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
                                     <th rowspan="2" style="text-align: center !important">เลขทะเบียนสรรพสามิตกเก่า</th>
                                     <th rowspan="2">ชื่อผู้ประกอบการ</th>
