--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
@@ -137,7 +137,7 @@
                         <table id="userManagementDt" class="ui small celled table aligned hover striped selectable nowrap" style="width: 100%;">
                             <thead id="trDrinamic">
                                 <tr>
-                                    <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+                                    <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
                                     <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
                                     <th rowspan="2" style="text-align: center !important">เลขทะเบียนสรรพสามิตกเก่า</th>
                                     <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
