--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
@@ -117,7 +117,7 @@
         <table id="showDt" class="ui small celled table striped selectable nowrap" style="width: 100%">
             <thead>
               <tr style="text-align: center;">
-                <th>ลำดับ</th>
+                <th>ลำดับที่</th>
                 <th>รายการ</th>
                 <th>{{columnExcel1}}</th>
                 <th>{{columnExcel2}}</th>
