--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06.component.html
@@ -181,7 +181,7 @@
                     <table class="ui small celled table striped selectable" *ngIf="showSubMenuMat">
                         <thead>
                             <tr>
-                                <th>ลำดับ</th>
+                                <th>ลำดับที่</th>
                                 <th>กระดาษทำการจำหน่ายสินค้าสำเร็จรูป</th>
                             </tr>
                         </thead>
@@ -218,7 +218,7 @@
                     <table class="ui small celled table striped selectable" *ngIf="showSubMenuIns">
                         <thead>
                             <tr>
-                                <th>ลำดับ</th>
+                                <th>ลำดับที่</th>
                                 <th>กระดาษทำการรับ-จ่ายสินค้าสำเร็จรูป</th>
                             </tr>
                         </thead>
@@ -247,7 +247,7 @@
                     <table class="ui small celled table striped selectable" *ngIf="showSubMenuTax">
                         <thead>
                             <tr>
-                                <th>ลำดับ</th>
+                                <th>ลำดับที่</th>
                                 <th>กระดาษทำการตรวจสอบการลดหย่อนภาษี</th>
                             </tr>
                         </thead>
