--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-6/int01-6-1/int01-6-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-6/int01-6-1/int01-6-1.component.html
@@ -88,7 +88,7 @@
                 <table id="table" class="ui small celled table nowrap striped selectable " style="width: 100%">
                     <thead>
                         <tr>
-                            <th rowspan="2" style="text-align: center !important;">ลำดับ</th>
+                            <th rowspan="2" style="text-align: center !important;">ลำดับที่</th>
                             <th rowspan="2" style="text-align: center !important;">ผู้ขออนุญาต</th>
                             <th rowspan="2" style="text-align: center !important;">ประเภทใบอนุญาต</th>
                             <th rowspan="1" colspan="2" style="text-align: center !important;" *ngFor="let data of trHtml1">{{data}}</th>
