--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-7/int01-7-1/int01-7-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-7/int01-7-1/int01-7-1.component.html
@@ -86,7 +86,7 @@
       <table id="table" class="ui small celled table nowrap striped selectable " style="width: 100%">
         <thead>
           <tr>
-            <th style="text-align: center !important;">ลำดับ</th>
+            <th style="text-align: center !important;">ลำดับที่</th>
             <th style="text-align: center !important;">ผู้ประกอบการ</th>
             <th style="text-align: center !important;">ประเภทใบอนุญาต</th>
             <th style="text-align: center !important;">แบบพิมพ์สรรพสามิต</th>
