--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -209,7 +209,7 @@
         <table id="tableData" class="ui small celled table striped selectable" style="width: 120%;">
           <thead>
             <tr style="text-align: center;">
-              <th rowspan="2">ลำดับ</th>
+              <th rowspan="2">ลำดับที่</th>
               <th rowspan="2" style="width: 40%;">โครงการตามยุทธศาสตร์</th>
               <th rowspan="2">หน่วยงาน</th>
               <th colspan="2">1.งบประมาณที่ใช้ตามแผนยุทธศาสตร์ที่กรมอนุมัติ</th>
