--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-15/ts01-15.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-15/ts01-15.component.html
@@ -95,7 +95,7 @@
                         <table class="ui celled padded table" style="text-align: center">
                             <thead>
                                 <tr>
-                                    <th class="single line">ลำดับ</th>
+                                    <th class="single line">ลำดับที่</th>
                                     <th>รอบระยะเวลาที่ตรวจสอบ</th>
                                     <th>ประเภทสินค้า/บริการ</th>
                                     <th>จำนวนภาษี</th>
