Change "value translation" to "translate the risk value"

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -209,7 +209,7 @@
             </tr>
             <tr style="text-align: center;">
               <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">RL</th>
-              <th style="width: 8%;">แปลค่า</th>
+              <th style="width: 8%;">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
           <tbody>
