--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-6/int08-2-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-6/int08-2-6.component.html
@@ -141,7 +141,7 @@
             </tr>
             <tr style="text-align: center;">
               <th style="width: 8%;">RL</th>
-              <th style="width: 8%;">แปลค่า</th>
+              <th style="width: 8%;">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
           <tbody>
