--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
@@ -151,7 +151,7 @@
               <th style="width: 8%;">กรกฎาคม</th>
               <th style="width: 8%;">สิงหาคม </th>
               <th style="width: 8%;">RL</th>
-              <th style="width: 8%;">แปลค่า</th>
+              <th style="width: 8%;">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
           <tbody>
