--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -219,11 +219,11 @@
             </tr>
             <tr style="text-align: center;">
               <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">RL</th>
-              <th style="width: 8%;">แปลค่า</th>
+              <th style="width: 8%;">แปลค่าความเสี่ยง</th>
               <th style="width: 8%;">RL</th>
-              <th style="width: 8%;">แปลค่า</th>
+              <th style="width: 8%;">แปลค่าความเสี่ยง</th>
               <th style="width: 8%;">RL</th>
-              <th style="width: 8%;">แปลค่า</th>
+              <th style="width: 8%;">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
           <tbody>
