--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-10/int08-3-10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-10/int08-3-10.component.html
@@ -58,7 +58,7 @@
             </tr>
             <tr>
               <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
-              <th style="text-align: center !important">แปลค่า</th>
+              <th style="text-align: center !important">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
         </table>
