Change "RL" to "risk"

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -208,7 +208,7 @@
               <th colspan="2">วิเคราะห์</th>
             </tr>
             <tr style="text-align: center;">
-              <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">RL</th>
+              <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">อัตราความเสี่ยง</th>
               <th style="width: 8%;">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
@@ -374,10 +374,10 @@
             <th>ค่าที่ 1</th>
             <th>ถึง</th>
             <th>ค่าที่ 2</th>
-            <th>ค่า RL</th>
-            <th>แปลงค่า</th>
+            <th>อัตราความเสี่ยง</th>
+            <th>แปลค่าความเสี่ยง</th>
             <th>สี</th>
-            <th>Action</th>
+            <th>จัดการ</th>
           </tr>
         </thead>
         <tbody>
