--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-6/int08-2-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-6/int08-2-6.component.html
@@ -140,7 +140,7 @@
 
             </tr>
             <tr style="text-align: center;">
-              <th style="width: 8%;">RL</th>
+              <th style="width: 8%;">อัตราความเสี่ยง</th>
               <th style="width: 8%;">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
@@ -221,10 +221,10 @@
             <th>ค่าที่ 1</th>
             <th>ถึง</th>
             <th>ค่าที่ 2</th>
-            <th>ค่า RL</th>
-            <th>แปลงค่า</th>
+            <th>อัตราความเสี่ยง</th>
+            <th>แปลงค่าความเสี่ยง</th>
             <th>สี</th>
-            <th>Action</th>
+            <th>จัดการ</th>
           </tr>
         </thead>
         <tbody>
