--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2.component.html
@@ -150,7 +150,7 @@
               <th style="width: 8%;">มิถุนายน </th>
               <th style="width: 8%;">กรกฎาคม</th>
               <th style="width: 8%;">สิงหาคม </th>
-              <th style="width: 8%;">RL</th>
+              <th style="width: 8%;">อัตราความเสี่ยง</th>
               <th style="width: 8%;">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
@@ -294,10 +294,10 @@
             <th>ค่าที่ 1</th>
             <th>ถึง</th>
             <th>ค่าที่ 2</th>
-            <th>ค่า RL</th>
-            <th>แปลงค่า</th>
+            <th>อัตราความเสี่ยง</th>
+            <th>แปลค่าความเสี่ยง</th>
             <th>สี</th>
-            <th>Action</th>
+            <th>จัดการ</th>
           </tr>
         </thead>
         <tbody>
