--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-8/int08-3-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-8/int08-3-8.component.html
@@ -101,7 +101,7 @@
               <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
             </tr>
             <tr>
-              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
+              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">อัตราความเสี่ยง</th>
               <th style="text-align: center !important">แปลค่าความเสี่ยง</th>
 
             </tr>
